tests/warn/fence.jo
def main =
  println ((5 +) * 6)            // error

  println (3 + 8 * (8 *) + 6)    // error
